--- a/src/modules/Filter/filter.scss
+++ b/src/modules/Filter/filter.scss
@@ -1,5 +1,5 @@
-@use "../varibles" as *;
-@use "../media" as *;
+@use "../../scss/varibles" as *;
+@use "../../scss/media" as *;
 
 .filter {
   &__form {
@@ -129,9 +129,6 @@
     @include mobile {
       width: 80px;
     }
-  }
-
-  &__type-list {
   }
 
   &__type-item {
