refactor: update header, footer, hero styles

--- a/src/modules/Footer/Footer.module.scss
+++ b/src/modules/Footer/Footer.module.scss
@@ -31,18 +31,18 @@
     margin-bottom: 16px;
   }
 
-  &__social-list {
+  &__socialList {
     display: flex;
     align-content: center;
     justify-content: center;
     gap: 12px;
   }
 
-  &__developers-title {
+  &__developersTitle {
     margin-bottom: 3px;
   }
 
-  &__developers-item {
+  &__developersItem {
     margin-bottom: 3px;
 
     &:last-child {
