--- a/src/modules/Header/Header.module.scss
+++ b/src/modules/Header/Header.module.scss
@@ -106,7 +106,7 @@
     }
   }
 
-  &__cart-button {
+  &__cartButton {
     background: url("/img/cart.svg") no-repeat center/contain;
     width: 28px;
     height: 28px;
