--- a/src/modules/Hero/Hero.module.scss
+++ b/src/modules/Hero/Hero.module.scss
@@ -12,7 +12,7 @@
     padding: 40px 0 73px;
   }
 
-  &__head-group {
+  &__headGroup {
     margin-bottom: 24px;
   }
 
@@ -53,7 +53,7 @@
     }
   }
 
-  &__group-image {
+  &__groupImage {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -75,23 +75,20 @@
       aspect-ratio: 680 / 588;
     }
 
-    &-center {
-      width: 100%;
-      height: 100%;
-      background: url("/img/hero@1x.jpg") no-repeat center/cover;
-      background-image: image-set(
-        url("/img/hero@1x.avif") type("image/avif") 1x,
-        url("/img/hero@2x.avif") type("image/avif") 2x,
-        url("/img/hero@1x.webp") type("image/webp") 1x,
-        url("/img/hero@2x.webp") type("image/webp") 2x,
-        url("/img/hero@1x.jpg") type("image/jpg") 1x,
-        url("/img/hero@2x.jpg") type("image/jpg") 2x
-      );
-    }
-
     &_right {
       border-radius: 400px 0 400px 400px;
     }
   }
-}
 
+  &__imageCenter {
+    width: 100%;
+    height: 100%;
+    background: url("/img/hero@1x.jpg") no-repeat center/cover;
+    background-image: image-set(url("/img/hero@1x.avif") type("image/avif") 1x,
+        url("/img/hero@2x.avif") type("image/avif") 2x,
+        url("/img/hero@1x.webp") type("image/webp") 1x,
+        url("/img/hero@2x.webp") type("image/webp") 2x,
+        url("/img/hero@1x.jpg") type("image/jpg") 1x,
+        url("/img/hero@2x.jpg") type("image/jpg") 2x);
+  }
+}
