refactor: update goods, card styles

--- a/src/modules/Card/Сard.module.scss
+++ b/src/modules/Card/Сard.module.scss
@@ -56,7 +56,7 @@
     }
   }
 
-  &__date-delivery {
+  &__dateDelivery {
     padding-left: 20px;
     background-image: url("/img/delivery.svg");
     background-repeat: no-repeat;
