--- a/src/modules/Filter/Filter.module.scss
+++ b/src/modules/Filter/Filter.module.scss
@@ -70,12 +70,12 @@
     }
   }
 
-  &__radio:focus-visible + &__label {
+  &__radio:focus-visible+&__label {
     outline: 2px solid $orange;
     outline-offset: 5px;
   }
 
-  &__radio:checked + &__label {
+  &__radio:checked+&__label {
     background-color: $light-orange;
   }
 
@@ -104,7 +104,7 @@
     gap: 8px;
   }
 
-  &__choices-box {
+  &__choices_box {
     position: absolute;
     top: calc(100% + 20px);
     left: 50%;
@@ -118,7 +118,7 @@
     }
   }
 
-  &__input-price {
+  &__input_price {
     border-radius: 32px;
     padding: 8px 16px;
     width: 110px;
@@ -131,7 +131,8 @@
     }
   }
 
-  &__type-item {
+
+  &__type_item {
     margin-bottom: 8px;
 
     &:last-child {
@@ -139,7 +140,7 @@
     }
   }
 
-  &__type-button {
+  &__type_button {
     white-space: nowrap;
 
     &:hover {
