--- a/src/modules/Hero/Hero.module.scss
+++ b/src/modules/Hero/Hero.module.scss
@@ -12,7 +12,7 @@
     padding: 40px 0 73px;
   }
 
-  &__head-group {
+  &__headgroup {
     margin-bottom: 24px;
   }
 
@@ -53,7 +53,7 @@
     }
   }
 
-  &__group-image {
+  &__groupimage {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -75,7 +75,7 @@
       aspect-ratio: 680 / 588;
     }
 
-    &-center {
+    &_centerbg {
       width: 100%;
       height: 100%;
       background: url('/img/hero@1x.jpg') no-repeat center/cover;
