refactor: update hover, active styles

--- a/src/modules/Card/Card.module.scss
+++ b/src/modules/Card/Card.module.scss
@@ -73,7 +73,8 @@
     padding: 8px 16px;
     min-width: 120px;
     color: $white;
-    background: $light-orange;
+    background-color: $light-orange;
+    @extend %btn-placeholder;
   }
 
   &__button-text {
