--- a/src/modules/Subscribe/Subscribe.module.scss
+++ b/src/modules/Subscribe/Subscribe.module.scss
@@ -61,5 +61,6 @@
     justify-content: center;
     border-radius: 32px;
     background-color: $light-orange;
+    @extend %btn-placeholder;
   }
 }
