--- a/src/modules/Cart/Cart.module.scss
+++ b/src/modules/Cart/Cart.module.scss
@@ -2,8 +2,13 @@
 @use "@scss/media" as *;
 
 .cart {
-  align-self: start;
-  padding-top: 100px;
+  display: block;
+  position: absolute;
+  top: 18%;
+  right: 0;
+
+  /* Закругление углов для лучшего визуального эффекта */
+
   display: none;
 
   &_open {
@@ -32,6 +37,8 @@
     max-width: 100%;
     width: 310px;
     background-color: $white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4),
+      0 3px 6px rgba(0, 0, 0, 0.8);
     min-height: 778px;
     display: flex;
     flex-direction: column;
@@ -151,12 +158,13 @@
     justify-content: space-between;
   }
 
-  &__order-btn {
+  &__orderbtn {
     border-radius: 32px;
     padding: 9px 16px 8px 16px;
     background: $light-orange;
     color: $white;
-
+    @extend %btn-placeholder;
+    
     &:disabled {
       background-color: $light-orange;
       opacity: 0.4;
