--- a/src/modules/Choices/Choices.module.scss
+++ b/src/modules/Choices/Choices.module.scss
@@ -9,6 +9,17 @@
     align-items: center;
     gap: 8px;
     cursor: pointer;
+    transition: transform 0.2s ease, border-bottom 0.2s ease;
+
+    &:hover {
+      transform: scale(1.05);
+      border-bottom: 1px solid $green;
+    }
+
+    &:active {
+      transform: scale(0.95);
+      border-bottom: 1px solid $orange;
+    }
 
     &:after {
       content: "";
