--- a/src/modules/Header/Header.module.scss
+++ b/src/modules/Header/Header.module.scss
@@ -78,7 +78,7 @@
     }
   }
 
-  &__search-button {
+  &__searchbutton {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -90,6 +90,7 @@
     justify-content: center;
     border-radius: 32px;
     background-color: $light-orange;
+    @extend %btn-placeholder;
   }
 
   &__logo {
@@ -118,7 +119,16 @@
     font-size: 14px;
     line-height: 1.3;
     text-align: center;
-    color: $orange;
+    color: $light-orange;
+    transition: transform 0.2s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+
+    &:active {
+      transform: scale(0.9);
+    }
 
     @include tablet {
       grid-area: cart;
