fix: fix filter styles

--- a/src/modules/Filter/Filter.module.scss
+++ b/src/modules/Filter/Filter.module.scss
@@ -110,6 +110,7 @@
     background-color: $white;
     padding: 24px;
     border-radius: 12px;
+    z-index: 5;
 
     &_type {
       padding: 16px;
